--- a/websocket-chat/src/main/AndroidManifest.xml
+++ b/websocket-chat/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         <activity
             android:name=".ChatActivity"
             android:exported="false"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+            android:theme="@style/Theme.ChatActivity" />
     </application>
 
 </manifest>
